<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".NetActiv">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_host"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_host"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:text="0000"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"/>
            <EditText
                android:id="@+id/et_host"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </FrameLayout>

        <TextView
            android:id="@+id/tv_port"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_port"/>

        <FrameLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="0000"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"/>
            <EditText
                android:id="@+id/et_port"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_msg"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_msg"/>
        <FrameLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="0000"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"/>
            <EditText
                android:id="@+id/et_msg"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_weight="1"
            android:id="@+id/but_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but_send"/>

        <Button
            android:layout_weight="1"
            android:id="@+id/but_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but_cancel"/>

        <ToggleButton
            android:layout_weight="1"
            android:id="@+id/but_msg_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/echo_message"
            android:textOn="@string/http_message"
            android:checked="false"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_last_echo_line"
            android:text="@string/tv_last_echo_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_display"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

        <LinearLayout
            android:id="@+id/ll_web_view"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_weight="1"
                    android:id="@+id/but_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/but_back"/>
                <Button
                    android:layout_weight="1"
                    android:id="@+id/but_forward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/but_forward"/>
                <Button
                    android:layout_weight="1"
                    android:id="@+id/but_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/but_clear"/>
                <Button
                    android:layout_weight="1"
                    android:id="@+id/but_reload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/but_reload"/>
                <Button
                    android:layout_weight="1"
                    android:id="@+id/but_get"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/but_get"/>
            </LinearLayout>
            <WebView
                android:id="@+id/web_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </WebView>
        </LinearLayout>



    </LinearLayout>
</LinearLayout>
