<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="es.udc.psi14.lab08trabazo.ServerActiv"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/server_activ_but_listen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_activ_but_listen"/>

        <Button
            android:id="@+id/server_activ_but_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_activ_but_close"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/server_activ_et_port_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_activ_et_port_text"/>

        <EditText
            android:id="@+id/server_activ_et_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/server_activ_tv_ip_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_activ_tv_ip_text"/>

        <TextView
            android:id="@+id/server_activ_tv_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:id="@+id/server_activ_tv_client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/server_activ_tv_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </ScrollView>

</LinearLayout>
